<resources>
    <string name="app_name">Monitoring</string>
    <string name="start_job">Start</string>
    <string name="stop_job">Stop</string>
    <string name="charge_btn">Données</string>
    <string name="title_activity_plot">Plot_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="afficher">Graphique</string>
    <string name="reset">Reset</string>
    <string name="show_map">Show Map</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>